1.2.0 (2015-05-09)
UPD: kodion

1.1.2 (2015-02-27)
ADD: Recommended Tracks (via context menu of a track)
ADD: setting for items per page
FIX: encoding trouble

1.1.1 (2015-01-25)
UPD: dropped dependency of 'requests'-module because of performance issues

1.1.0 (2015-01-14)
ADD: Setup-Wizard
ADD: 'Go to [ARTIST]' via context menu
UPD: dropped support for Frodo. At least Gotham 13.2
UPD: set content type and override view
UPD: kodion

1.0.2 (2014-11-29)
FIX: disable verification warnings
FIX: login got lost

1.0.1 (2014-11-27)
FIX: support '/extrafanart/'
FIX: use correct IDs for kodion settings
UPD: improved performance
UPD: kodion tests

1.0.0 (2014-10-29)
FIX: client was always requesting a new token
UPD: using AccessManager of Kodimon
UPD: removed 'requests' in favor of 'script.module.requests'
FIX: possible crash while accessing non existing folders
ADD: pagination for stream, playlists, likes, etc.
FIX: playlist, likes, follower and following are working again
UPD: moved user profile to root
ADD: 'follow' and 'unfollow'
ADD: 'like' and 'unlike'
FIX: requesting a new access token after password or username have changed
UPD: code cleaning
ADD: support for playlists, likes, follower, following
ADD: login for stream (testing)
ADD: 'explore' for trending and genres (finished)
ADD: playback of track items
ADD: support for track items
ADD: search for tests