@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.audio.soundcloud" name="SoundCloud" version="1.2.0" provider-name="bromix">
+<addon id="plugin.audio.soundcloud" name="SoundCloud" version="1.2.0~beta1" provider-name="bromix">
 	<requires>
 		<import addon="xbmc.python" version="2.14.0"/>
 	</requires>
